# Aura

./: AGENTS.md  README.md
.cursor/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FLOW.md  README.md
.cursor/commands/: backend-deploy.md  create-app.md  create-plugin.md  flutter-setup.md  format.md  test-integration.md  update-api-docs.md
.cursor/docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_FLOW.md  FIRMWARE_COMPONENTS.md  INDEX.md  USAGE_GUIDE.md
.cursor/hooks/: format.sh
.cursor/rules/: auto-documentation.mdc  backend-api-patterns.mdc  backend-architecture.mdc  backend-database-patterns.mdc  backend-imports.mdc  backend-llm-patterns.mdc  backend-testing.mdc  codebase-overview.mdc  common-mistakes.mdc  context-communication.mdc  documentation-standards.mdc  firmware-architecture.mdc  firmware-audio-codecs.mdc  firmware-ble-service.mdc  flutter-architecture.mdc  flutter-backend-integration.mdc  flutter-ble-protocol.mdc  flutter-localization.mdc  flutter-platform-specific.mdc  formatting.mdc  memory-management.mdc  omi-specific-patterns.mdc  plugin-apps-js.mdc  plugin-development.mdc  pre-implementation-checklist.mdc  web-nextjs-patterns.mdc  web-ui-components.mdc
.gemini/: config.yaml
app/: README.md  analysis_options.yaml  pubspec.yaml  setup.sh  test.sh
app/integration_test/: app_performance_test.dart
app/lib/: flavors.dart  main.dart
assest/: seeed studio ESP32C6 minimal.3mf
aura-pendant/: README.md  app.json  package-lock.json  package.json
backend/: README.md
mcp/: pyproject.toml
mcp/src/mcp_server_aura/: server.py
web/frontend/: README.md
(+650 files in other folders)
