[project]
name = "mcp-server-aura"
dynamic = ["version"]
description = 'Model Context Protocol Server for Aura AI'
readme = "README.md"
requires-python = ">=3.11.6"
license = "MIT"
keywords = ["aura", "mcp"]
authors = [
  { name = "Soham Datta", email = "soham@aura.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License", 
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.7",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-server-aura = "mcp_server_aura:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.version]
path = "src/mcp_server_aura/__about__.py"
